<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">


    <TextView
        android:id="@+id/text_masukan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@+id/square_field"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/text_masukan_kode"
        android:gravity="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <com.poovam.pinedittextfield.SquarePinField
        android:id="@+id/square_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_masukan"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:textSelectHandle="@drawable/text_handle"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:fieldBgColor="#ddd"
        app:noOfFields="6" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_confirmation"
        android:layout_marginBottom="16dp"
        >

        <TextView
            android:id="@+id/text_salah_no_handphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_salah_no_handphone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="right"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/text_ubah_no_handphone"
            />

        <TextView
            android:id="@+id/text_ubah_no_handphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/text_ubah_no_handphone"
            app:layout_constraintLeft_toRightOf="@+id/text_salah_no_handphone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/button_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:text="@string/text_konfirmasi"
        android:enabled="false"
        />



</androidx.constraintlayout.widget.ConstraintLayout>