<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7cffd0"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="148dp"
        android:padding="16dp"
        android:background="@drawable/bg_rounded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_label_no_rm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_no_rekam_medis"
            />

        <EditText
            android:id="@+id/edit_text_no_rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_no_rm"
            />

        <TextView
            android:id="@+id/text_label_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_no_rm"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_name"
            />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_name"
            />

        <TextView
            android:id="@+id/text_label_ttl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"

            android:text="@string/text_tanggal_lahir"
            />

        <EditText
            android:id="@+id/edit_text_ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_ttl"
            />


        <TextView
            android:id="@+id/text_label_alamat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_ttl"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_alamat"
            />

        <EditText
            android:id="@+id/edit_text_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_alamat"
            />

        <TextView
            android:id="@+id/text_label_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_alamat"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_email"
            />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_email"
            />



        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Simpan"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>